add note for JDK16+